--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "jasmine-node spec"
+    "test": "jasmine-node test",
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3",
-    "request": "^2.85.0"
+    "express": "^4.16.4",
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "jasmine-node": "^1.14.5"
+    "jasmine-node": "^2.0.1"
   }
 }
