--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "install": "npm-git install"
     "test": "jasmine-node test",
     "start": "node app.js"
   },
