--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-mongo-crud": "^1.3.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "router": "^1.3.3"
   },
   "devDependencies": {
     "jasmine-node": "^2.0.1"
