--- a/mongo_db/docker-compose.yml
+++ b/mongo_db/docker-compose.yml
@@ -12,4 +12,4 @@ services:
             - 27017:27017
         volumes:
             - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
-            - ./Users/adrianlee/Desktop/mongoDB_data:/data/db mongo
+            - /home/mongoDB_data:/data/db mongo
