--- a/Kubernetes/node-js-service-deploy.yaml
+++ b/Kubernetes/node-js-service-deploy.yaml
@@ -2,21 +2,21 @@ apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
   labels:
-    name: web
-  name: web
+    name: sps-app
+  name: sps-app
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        name: web
+        name: sps-app
     spec:
       containers:
       - image: leexha/node_demo:25
         env:
         - name: MONGODB_URL
           value: "mongodb://mongo.default.svc.cluster.local:27017/user"
-        name: web
+        name: sps-app
         ports:
         - containerPort: 4000
-          name: web
+          name: sps-app
