--- a/Kubernetes/node-js-service.yaml
+++ b/Kubernetes/node-js-service.yaml
@@ -1,14 +1,27 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: web
+  name: sps-app
   labels:
-    name: web
+    name: sps-app
 spec:
-  type: NodePort
   ports:
     - port: 4000
       targetPort: 4000
       protocol: TCP
   selector:
-    name: web
+    name: sps-app
+
+---
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: sps
+spec:
+  rules:
+  - host: sps.corp.local
+    http:
+      paths:
+      - backend:
+          serviceName: sps-app
+          servicePort: 4000
