--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chart.js": "^2.8.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-mongo-crud": "^1.3.0",
