--- a/Kubernetes/node-js-service.yaml
+++ b/Kubernetes/node-js-service.yaml
@@ -10,7 +10,7 @@ spec:
       targetPort: 4000
       protocol: TCP
   selector:
-    name: sps-app
+    name: sps
 
 ---
 apiVersion: extensions/v1beta1
@@ -23,5 +23,5 @@ spec:
     http:
       paths:
       - backend:
-          serviceName: sps-app
+          serviceName: sps
           servicePort: 4000
