--- a/Kubernetes/node-js-service-deploy.yaml
+++ b/Kubernetes/node-js-service-deploy.yaml
@@ -12,7 +12,7 @@ spec:
         name: sps
     spec:
       containers:
-      - image: leexha/demo:26
+      - image: leexha/node_demo:26
         env:
         - name: MONGODB_URL
           value: "mongodb://mongo.default.svc.cluster.local:27017/user"
