--- a/Kubernetes/mongodb.yaml
+++ b/Kubernetes/mongodb.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
@@ -24,6 +25,15 @@ spec:
             value: password
         ports:
           - containerPort: 27017
+
+        volumeMounts:
+          - name: mongo-initdb
+            mountPath: /docker-entrypoint-initdb.d
+      volumes:
+      - name: mongo-initdb
+        configMap:
+          name: mongo-initdb
+
 
 ---
 apiVersion: v1
