--- a/Kubernetes/mongodb.yaml
+++ b/Kubernetes/mongodb.yaml
@@ -45,6 +45,8 @@ metadata:
 spec:
   ports:
     - port: 27017
+      nodePort: 31273
       targetPort: 27017
   selector:
     app: database
+  type: NodePort
